--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="sample.js"></script>
 </head>
 <body>
-  <div class="header">Header領域 編集</div>
+  <div class="header">Header領域 編集（競合）</div>
   <div class="main">
     <h1>見出し</h1>
     <p>コンテンツ</p>
